# finite-difference

./: Cargo.toml  README.md
src/: back.rs  bot.rs  conditions.rs  corner.rs  dump.rs  edge.rs  error.rs  front.rs  internal.rs  left.rs  macros.rs  main.rs  plot.py  prelude.rs  right.rs  setup.rs  solver.rs  top.rs
