[package]
name = "finite-difference"
version = "0.1.0"
authors = ["VanillaBrooks <brooks@karlik.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.14.0", features = ["rayon"]}
typed-builder = "0.8.0"
serde = {version="1.0.118", features=["derive"]}
serde_json = "1.0.60"
