[package]
name = "finite-difference"
version = "0.2.0"
authors = ["VanillaBrooks <brooks@karlik.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.6", features = ["rayon"]}
typed-builder = "0.11.0"
serde = {version="^1.0.0", features=["derive"]}
serde_json = "^1.0.0"
rayon = "1.10.0"
